Menambah sedikit dan merubah javascript

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ada yang lupa ? - KetikaLupa Homepage</title>
+    <title>KetikaLupa | Selamat datang di KetikaLupa.</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,16 +28,13 @@
         </div>
         <div class="menu-container">
           <div class="menu">
-            <div class="close" id="close">
-              <i data-feather="x"></i>
-            </div>
             <div class="search">
               <i data-feather="search" id="search"></i>
               <input placeholder="Apa yang kamu lupakan ?" />
             </div>
             <div class="links">
-              <a href="#home">Home</a>
-              <a href="#">Tips & Trick</a>
+              <a href="#">Home</a>
+              <a href="../../../../Tempat Artikel/index.html">Tips & Trick</a>
               <a href="#">FunFact</a>
               <a href="#">Quotes</a>
               <a href="#">About Us</a>
@@ -51,34 +48,53 @@
       </div>
     </nav>
 
-    <section class="screen" id="home">
+    <section class="screen">
       <div class="hero">
         <div class="hero-content">
           <h1>Hi, Selamat Datang di <span>KetikaLupa.</span></h1>
           <p>
             Kami selalu menyajikan berbagai macam artikel/paduan terbaru.<br />
           </p>
-          <div class="hero-cta"><a href="#links">Explore Yuk!</a></div>
+          <div class="hero-cta"><a>Explore</a></div>
         </div>
         <div class="hero-person"></div>
       </div>
     </section>
 
     <section>
-      <div class="container" id="links">
-        <div class="container-content">
-          <div class="container-article">
-            <div class="link1"></div>
-            <div class="link2"></div>
-            <div class="link3"></div>
-            <div class="link4"></div>
-            <div class="link5"></div>
-            <div class="link6"></div>
-            <div class="link7"></div>
-            <div class="link8"></div>
-            <div class="link9"></div>
-          </div>
+      <div class="contents">
+        <h1>Terbaru di KetikaLupa</h1>
+        <p>Baca update artikel terbaru setiap harinya.</p>
+        <div class="container-contents">
+          <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
         </div>
+      </div>
+
+      <div class="contents-slider" id="slider">
+        <ul>
+          <li><a href="#blank">1</a></li>
+          <li><a href="../../Tempat Artikel/index.html">2</a></li>
+          <li><a href="">3</a></li>
+          <li><a href="">4</a></li>
+          <li><a href="">...</a></li>
+          <li><a href="">12</a></li>
+          <li>
+            <a href="#"><i data-feather="chevron-right"></i></a>
+          </li>
+        </ul>
       </div>
     </section>
 
