--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="links">
               <a href="#">Home</a>
-              <a href="../../../../Tempat Artikel/index.html">Tips & Trick</a>
+              <a href="">Tips & Trick</a>
               <a href="#">FunFact</a>
               <a href="#">Quotes</a>
               <a href="#">About Us</a>
@@ -86,7 +86,7 @@
       <div class="contents-slider" id="slider">
         <ul>
           <li><a href="#blank">1</a></li>
-          <li><a href="../../Tempat Artikel/index.html">2</a></li>
+          <li><a href="">2</a></li>
           <li><a href="">3</a></li>
           <li><a href="">4</a></li>
           <li><a href="">...</a></li>
