--- a/index.html
+++ b/index.html
@@ -34,11 +34,30 @@
             </div>
             <div class="links">
               <a href="#">Home</a>
-              <a href="">Tips & Trick</a>
-              <a href="#">FunFact</a>
-              <a href="#">Quotes</a>
-              <a href="#">About Us</a>
+              <a href="../ArticlePage/index.html"
+                >Artikel<i data-feather="chevron-down" id="chevron-down"></i
+              ></a>
+              <a href="#"
+                >Belanja<i data-feather="chevron-down" id="chevron-down"></i
+              ></a>
+              <a href="#">Tentang Kami</a>
             </div>
+            <!-- <div class="study">
+              <ul>
+                <li><a href="">Matematika</a></li>
+                <li><a href="">Fisika</a></li>
+                <li><a href="">Kimia</a></li>
+                <li><a href="">IPA</a></li>
+                <li><a href="">B. Inggris</a></li>
+              </ul>
+            </div> -->
+            <!-- <div class="more">
+              <ul>
+                <li><a href="">Tips & Trick</a></li>
+                <li><a href="">Funfact</a></li>
+                <li><a href="">Quotes</a></li>
+              </ul>
+            </div> -->
           </div>
         </div>
       </div>
@@ -67,7 +86,7 @@
         <p>Baca update artikel terbaru setiap harinya.</p>
         <div class="container-contents">
           <ul>
-            <li><a href="#"></a></li>
+            <li><a href="../ArticleView(Anime)/Anime/index.html"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
